auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
          - path: /sessions
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
          - path: /signin
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
          - path: /logout
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
