billing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /billing/add
            pathType: Prefix
            backend:
              service:
                name: billing
                port:
                  number: 9000
          - path: /billing/pay
            pathType: Prefix
            backend:
              service:
                name: billing
                port:
                  number: 9000
          - path: /billing/get
            pathType: Prefix
            backend:
              service:
                name: billing
                port:
                  number: 9000
