cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/v1/cart/products/
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 9000
          - path: /api/v1/cart/clear/
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 9000
