catalog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/v1/search/product_search/
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 9000
          - path: /api/v1/products/
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 9000
