prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /actuator/prometheus
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 9000
